overflow fix in modals

--- a/app/styles/item.css
+++ b/app/styles/item.css
@@ -240,7 +240,7 @@ Inline images (TODO show these only when image is larger than available space) *
 	border: none;
 	overflow: auto;
 	width: 100%;
-	height: 98%;
+	height: 96%;
 }
 .touchDevice .modal .iframeContainer {
 	/* TODO make sure this class is being applied */
